// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`カウント+1 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"btc\\": 0,
-   \\"count\\": 10,
+   \\"count\\": 11,
    \\"eth\\": 0,
    \\"euro\\": 0,
    \\"isAvailable\\": false,
    \\"ltc\\": 0,
  }"
`;

exports[`カウント-1 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
    \\"btc\\": 0,
-   \\"count\\": 10,
+   \\"count\\": 9,
    \\"eth\\": 0,
    \\"euro\\": 0,
    \\"isAvailable\\": false,
    \\"ltc\\": 0,
  }"
`;

exports[`初期化 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
